Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9620

ost-pools_5b test failed: pool_proc_show()) ASSERTION( iter->lpi_idx <= ((iter->lpi_pool)->pool_obds.op_count) ) failed: LBUG

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.11.0
    • Lustre 2.5.1
    • None
    • 3
    • 9223372036854775807

      5b.console.fre1125.log
      LustreError: 1224:0:(lod_pool.c:369:pool_proc_show()) ASSERTION( iter->lpi_idx <= ((iter->lpi_pool)->pool_obds.op_count) ) failed:

      LustreError: 1224:0:(lod_pool.c:369:pool_proc_show()) LBUG

      Pid: 1224, comm: lctl

      Call Trace:

      [<ffffffffa02c1895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]

      [<ffffffffa02c2007>] lbug_with_loc+0x47/0xb0 [libcfs]

      [<ffffffffa0c20bbe>] pool_proc_show+0x1be/0x1f0 [lod]

      [<ffffffff811ae4b9>] seq_read+0x289/0x400

      [<ffffffff811f3abe>] proc_reg_read+0x7e/0xc0

      [<ffffffff81189be5>] vfs_read+0xb5/0x1a0

      [<ffffffff81189d21>] sys_read+0x51/0x90

      [<ffffffff810e1ffe>] ? __audit_syscall_exit+0x25e/0x290

      [<ffffffff8100b072>] system_call_fastpath+0x16/0x1b

      Kernel panic - not syncing: LBUG

            wc-triage WC Triage
            jadhav.vikram VIKRAM BABASO JADHAV (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: